fixed initial messages bg load

--- a/_includes/slide2.html
+++ b/_includes/slide2.html
@@ -25,11 +25,8 @@
                         
                         <p>Whether through participating in the G20 or other major fora, CIGI will continue to work through forward-looking, evidence-based deliberation to reach a new Bretton Woods moment for our times. We take seriously the “innovation” and “governance” in our name, which will help get us there.</p>
                         <div class="sig-image"><img src="{{ "/assets/MedhoraSignature.png" | relative_url }}" alt="signature"></div>
-                        <p class="signature">Rohinton P. Medhora<br>
+                        <p class="signature"><strong>Rohinton P. Medhora</strong><br>
                             President, CIGI</p>
-                        </div>
-                        <div class="photo-caption messages-caption">
-                            Photo of Rohinton P. Medhora
                         </div>
                     </div>
                     <div class="tab" id="chair-message" data-id="tab-2" data-name="chairs-message">
@@ -49,11 +46,8 @@
                             
                             <p>Our many global and local partners can be proud of CIGI’s new approach this year. It would not have been possible without their support – especially from the Governments of Canada and Ontario, and the City of Waterloo – to help make CIGI a relevant, trusted and innovative Canadian think tank with a global perspective.</p>
                             <div class="sig-image"><img src="{{ "/assets/BalsillieSignature.png" | relative_url }}" alt="signature"></div>
-                            <p class="signature">Jim Balsillie<br>
+                            <p class="signature"><strong>Jim Balsillie</strong><br>
                                 Chair, CIGI Board of Directors</p>
-                            </div>
-                            <div class="photo-caption messages-caption">
-                                Photo of Jim Balsillie
                             </div>
                         </div>
                     </div>
