setting width of logo so it doesn't depend on viewport height

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header id="site-header" class="site-header wrapper w-100 z-8 flex justify-between items-center" role="banner">
   <a href="{{ "https://www.cigionline.org" }}" class="mv4-ns dn db-ns">
-    <img src="{{ "/assets/cigi-logo.svg" | relative_url }}" alt="CIGI Logo" class="w-5rem-10vh dn db-ns">
+    <img src="{{ "/assets/cigi-logo.svg" | relative_url }}" alt="CIGI Logo" class="cigi-logo-desktop dn db-ns">
   </a>
   <a href="{{ "https://www.cigionline.org" }}" class="dn-ns">
     <img class="cigi-logo-mobile" src="{{ "/assets/CIGI-logo-acronym-RGB-transparent.png" | relative_url }}" alt="CIGI Logo">
