--- a/_assets/css/custom/navigation.scss
+++ b/_assets/css/custom/navigation.scss
@@ -163,3 +163,7 @@ $tooltip-background: rgba(60, 60, 60, 0.9);
   position: relative;
   width: 2rem;
 }
+
+.cigi-logo-desktop {
+  width: 10rem;
+}
