people's titles are to be italics, not content title

--- a/_includes/slide2.html
+++ b/_includes/slide2.html
@@ -26,7 +26,7 @@
                         <p>Whether through participating in the G20 or other major fora, CIGI will continue to work through forward-looking, evidence-based deliberation to reach a new Bretton Woods moment for our times. We take seriously the “innovation” and “governance” in our name, which will help get us there.</p>
                         
                         <p class="signature"><strong>Rohinton P. Medhora</strong><br>
-                            President, CIGI</p>
+                            <em>President, CIGI</em></p>
                             
                         </div>
                 </div>
@@ -48,7 +48,7 @@
                             <p>Our many global and local partners can be proud of CIGI’s new approach this year. It would not have been possible without their support – especially from the Governments of Canada and Ontario, and the City of Waterloo – to help make CIGI a relevant, trusted and innovative Canadian think tank with a global perspective.</p>
                             
                             <p class="signature"><strong>Jim Balsillie</strong><br>
-                                Chair, CIGI Board of Directors</p>
+                                <em>Chair, CIGI Board of Directors</em></p>
                                 
                         </div>
                 </div>
