--- a/_assets/css/custom/mobile.scss
+++ b/_assets/css/custom/mobile.scss
@@ -8,6 +8,13 @@
 }
 
 @media (max-width: $small-phone - 0.01em), (max-height: $small-phone - 0.01em) {
+  .slide-2{
+    background-image: none;
+    &:before {
+      opacity: 0;
+    }
+  }
+  
   section {
     background: $background-color;
     border-bottom: solid 1px $grey-color-dark;
