another approach to background images

--- a/_includes/slide4.html
+++ b/_includes/slide4.html
@@ -1,4 +1,7 @@
 <section class="vh-100-ns standard-slide slide-4">
+    <div class="img-container" style="background-image: url('assets/slides/nafta.jpg')">
+      
+</div>
   <div class="wrapper h-100 flex items-end">
     <div class="slide-content pb4-ns pr6-ns pb6-ns z-1 flex flex-column">
       {% markdown template_content/slide4-nafta.md %}
