--- a/_assets/css/custom/mobile.scss
+++ b/_assets/css/custom/mobile.scss
@@ -193,28 +193,34 @@
     }
   }
   
-  .img-container {
-    img {
-      height: 100vh;
-      left: 0;
-      object-fit: cover;
-      position: absolute;
-      top: 0;
-      width: 100vw;
-    }
-    &::before {
-      background: linear-gradient(to right, rgba(255, 255, 255, 0.85), rgba(255, 255, 255, 0.55));
-      content: ' ';
-      display: block;
-      height: 100%;
-      left: 0;
-      opacity: 1;
-      position: absolute;
-      top: 0;
-      width: 100%;
-      z-index: 1;
-    }
+  .img-container{
+    background: cover;
+    position: absolute;
+    height: 100%;
+    width: 100%;
   }
+  // .img-container {
+  //   img {
+  //     height: 100vh;
+  //     left: 0;
+  //     object-fit: cover;
+  //     position: absolute;
+  //     top: 0;
+  //     width: 100vw;
+  //   }
+  //   &::before {
+  //     background: linear-gradient(to right, rgba(255, 255, 255, 0.85), rgba(255, 255, 255, 0.55));
+  //     content: ' ';
+  //     display: block;
+  //     height: 100%;
+  //     left: 0;
+  //     opacity: 1;
+  //     position: absolute;
+  //     top: 0;
+  //     width: 100%;
+  //     z-index: 1;
+  //   }
+  // }
   
   .slide-content > :not(.img-container) {
     position: relative;
