updating background image

--- a/_includes/slide5.html
+++ b/_includes/slide5.html
@@ -1,14 +1,24 @@
 <section class="vh-100-ns standard-slide slide-5">
-  <div class="wrapper h-100 flex items-end">
-    <div class="slide-content pb4-ns pr6-ns pb6-ns z-1 flex flex-column">
-      {% markdown template_content/slide5-gcig.md %}
-      <div class="view-article pb2 pt2">
-        <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/publications/look-whos-watching-surveillance-treachery-and-trust-online?source=ar2017"><i class="fa fa-file-text-o" aria-hidden="true"></i>Read more about <em>Look Who’s Watching</em>.
-        </a>
+    <div class="background-img" style="background-image: url('assets/slides/LWW_background-image.jpg')"></div>
+
+    <div class="wrapper h-100 flex items-end">
+      <div class="slide-content pb4-ns pr6-ns pb6-ns z-1 flex flex-column">
+
+        <div class="mobile-img"><img src="assets/slides/LWW_background-image.jpg" alt="Eye of owl"></div>
+
+        <h3>Research</h3>
+        <h1>Surveillance, Treachery and Trust Online</h1>
+        <p>From its opening lines about the high-profile hack of extramarital affair website Ashley Madison and later analysis of Edward Snowden’s revelations of government spying on internet users, *Look Who’s Watching: Surveillance, Treachery and Trust Online* demonstrates that public trust in the internet is often misplaced and is quickly eroding.</p>
+        <p>Global Security & Politics Program Director Fen Osler Hampson and Research Fellow Eric Jardine draw on extensive research, including multiple CIGI-Ipsos surveys and the final report of the CIGI-Chatham House Global Commission on Internet Governance, to examine why users are losing trust in the internet. They conclude that restoring trust in the internet is vital and possible through deliberate policy action. </p>
+        <p><em>Look Who’s Watching</em> is a semifinalist for the prestigious 2018 Grawemeyer Award, was listed among the best books of 2016 by <em>The Hill Times</em> and is shaping conversations in university classrooms through course adoptions. </p>
+          
+        <div class="view-article pb2 pt2">
+          <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/publications/look-whos-watching-surveillance-treachery-and-trust-online?source=ar2017"><i class="fa fa-file-text-o" aria-hidden="true"></i>Read more about <em>Look Who’s Watching</em>.
+          </a>
+        </div>
+        <div class="lightbox-link">
+            <div class="soundcloud-lightbox pointer" data-url="https://soundcloud.com/cigionline/cigi-podcast-episode-1001"><i class="fa fa-volume-down" aria-hidden="true"></i>Listen to former CBC Radio host Mary Ambrose interview Fen Osler Hampson about <em>Look Who’s Watching</em>.</div>
       </div>
-      <div class="lightbox-link">
-          <div class="soundcloud-lightbox pointer" data-url="https://soundcloud.com/cigionline/cigi-podcast-episode-1001"><i class="fa fa-volume-down" aria-hidden="true"></i>Listen to former CBC Radio host Mary Ambrose interview Fen Osler Hampson about <em>Look Who’s Watching</em>.</div>
+      </div>
     </div>
-    </div>
-  </div>
 </section>
