removing md files and moving content to html templates, updating behaviour for background and mobile images

--- a/_includes/home.html
+++ b/_includes/home.html
@@ -4,7 +4,7 @@
     </div>
     <div class="wrapper h-100 flex items-center justify-center">
         <div class="content-wrapper">
-            {% markdown template_content/home.md %}
+            <h1>Home</h1>
             <div class="content">
                 <div class="landing-content">
                     <div class="title">
