--- a/_includes/slide4.html
+++ b/_includes/slide4.html
@@ -1,13 +1,13 @@
 <section class="vh-100-ns standard-slide slide-4">
 
-    <div class="background-img progressive" style="background-image: url('assets/slides/nafta.jpg')"></div>
+    <div class="background-img" style="background-image: url('assets/slides/nafta.jpg')"></div>
 
     <div class="wrapper h-100 flex items-end">
       <div class="slide-content pb4-ns pr6-ns pb6-ns z-1 flex flex-column">
 
-        <div class="mobile-img"><img src="assets/slides/nafta.jpg" alt="Bill Clinton signing the Nafta Agreement"></div>
         <h3>Analysis</h3>
         <h1>Modernizing NAFTA</h1>
+        <div class="mobile-img"><img src="assets/slides/nafta.jpg" alt="Bill Clinton signing the Nafta Agreement"></div>
           <p>From the moment US President Donald Trump’s administration set in motion the renegotiation of the 25-year-old North American Free Trade Agreement (NAFTA), CIGI has been Canada’s leading resource for timely, expert analysis with over 700 media mentions.</p>
           
           <p>Senior Fellow Patrick Leblond’s first-out-of-the-gate research on modernizing NAFTA led to opinion editorials in *Maclean's* and <em>The Globe and Mail</em>, and was followed by a series of digital essays on what modernizing the trade accord will mean for the knowledge economy in Canada and the people who turn ideas into innovations within the free trade zone.</p>
