--- a/_includes/slide15.html
+++ b/_includes/slide15.html
@@ -1,7 +1,17 @@
 <section class="vh-100-ns standard-slide slide-15">
+  <div class="background-img" style="background-image: url('assets/slides/T20-background.jpg')"></div>
+
   <div class="wrapper h-100 flex items-end">
     <div class="slide-content pb4-ns pr6-ns pb6-ns z-1 flex flex-column">
-      {% markdown template_content/slide15-t20.md %}
+        <h3>Expertise</h3>
+        <h1>CIGI at the T20 and G20 Summits</h1>
+        <div class="mobile-img"><img src="assets/slides/T20-background.jpg" alt="Angela Merkel at T20 meeting"></div>
+        
+        <p>CIGI convened its first G20-focused group in December 2009, when it helped lay the groundwork for the forum to expand from national finance ministers to leaders. Eight years later, CIGI experts from all three programs led discussions at the 2017 G20 and T20 summits.</p>
+        
+        <p>Global Security & Politics Program Director Fen Osler Hampson participated in the T20 plenary, Digitalization: Enabler of Inclusive Global Growth and Development, and co-chaired the T20 Task Force on the Digital Economy. Several CIGI colleagues, including Distinguished Fellow Eileen Donahoe, also contributed to these pressing discussions, tasked with developing policy recommendations around cybercrime attacks on financial institutions, blockchain technology’s future and bridging the digital divide.</p>
+        <p>CIGI published more than 20 publications on G20 issues prior to the Hamburg G20 Summit, and Distinguished Fellow Thomas A. Bernes helped carry the message at the summit by providing on-the-ground insight to news media. The resulting interviews contributed to CIGI’s widest G20 media reach yet, with almost 400 media mentions. </p>
+        
       <div class="view-article pb2 pt2">
         <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/activity/cigi-and-think-20-t20?source=ar2017"><i class="fa fa-file-text-o" aria-hidden="true"></i>Read CIGI experts’ contributions to T20 policy briefs.</a>
       </div>
