--- a/_includes/slide17.html
+++ b/_includes/slide17.html
@@ -1,7 +1,18 @@
 <section class="vh-100-ns standard-slide slide-17">
+    <div class="background-img" style="background-image: url('assets/slides/2017 CIGI Staff Photo - Setup 2 - FInal OPTIMIZED.jpg')"></div>
+    
   <div class="wrapper h-100 flex items-end">
       <div class="slide-content pb4-ns pr6-ns pb6-ns z-1 flex flex-column">
-        {% markdown template_content/slide17-staff.md %}
+        <h1>Thank You</h1>
+        <div class="mobile-img"><img src="assets/slides/2017 CIGI Staff Photo - Setup 2 - FInal OPTIMIZED.jpg" alt="Staff Photo 2017"></div>
+
+      <div class="photo-caption">
+        Staff Photo
+      </div>
+      <p>The success stories in this annual report, and the many others not highlighted here, are the direct result of the timely, relevant and innovative work of CIGI’s staff and fellows. Their work is a testament to CIGI’s mission to build bridges from knowledge to power.</p>
+      <p>But none of this would be possible without CIGI’s valued network of partners. We thank the Governments of Canada and Ontario, the City of Waterloo and our many associates in the local and global communities for their ongoing support of our work. </p>
+      <p>This new, interactive annual report is part of CIGI’s digital-first approach to addressing the world’s most pressing international governance questions. Be sure to follow along on CIGIOnline.org over the coming year. In 2018, the world’s eyes will be on Charlevoix, Quebec, as Canada hosts the G7. As always, CIGI will be there to provide research, analysis and expertise.</p>
+
         <div class="view-article pb2 pt2">
           <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/about/annual-report?source=ar2017"><i class="fa fa-file-text-o" aria-hidden="true"></i>Download Annual Report PDF.</a>
       </div>
