--- a/_includes/slide3.html
+++ b/_includes/slide3.html
@@ -1,11 +1,12 @@
 <section class="vh-100-ns standard-slide slide-3">
+    <div class="background-img"></div>
 
   <div class="wrapper h-100 flex items-end">
     <div class="slide-content pb4-ns pb6-ns pr6-ns z-1 flex flex-column">
-      <div class="mobile-img"><img src="assets/slides/AR_InnovationSeries_mobile.jp" alt="geometric line art"></div>
+      
       <h3>Analysis</h3>
       <h1>New Thinking on Innovation</h1>
-
+      <div class="mobile-img"><img src="assets/slides/AR_InnovationSeries_mobile.jpg" alt="geometric line art"></div>
         <p>Innovation is at the heart of the knowledge economy and an engine of prosperity. Yet in Canada, productivity has been stubbornly flat for the past 30 years — leading to a preoccupation with policies that stimulate innovation.</p>
         
         <p>CIGI responded in the spring of 2017 by bringing together top scholars and practitioners to offer fresh perspectives and policy approaches for Canada and for the global economic cooperation system. The resulting series of 18 online essays, New Thinking on Innovation, addressed a wide range of topics, from the role of international trade in stimulating innovation to the impact of intellectual property strategies on competitiveness.</p>
