--- a/_includes/slide6.html
+++ b/_includes/slide6.html
@@ -1,7 +1,20 @@
 <section class="vh-100-ns standard-slide slide-6">
+
+  <div class="background-img" style="background-image: url('assets/slides/laid_low_bg.jpg')"></div>
+  
   <div class="wrapper h-100 flex items-end">
     <div class="slide-content pb4-ns pr6-ns pb6-ns z-1 flex flex-column">
-      {% markdown template_content/slide6-eurozone.md %}
+
+        <h3>Research</h3>
+        <h1>Lessons from the Euro-zone Crisis</h1>
+        <div class="mobile-img"><img src="assets/slides/laid_low_bg.jpg" alt="Wave of paper bills"></div>
+        <p>The latest book by senior fellow and journalist Paul Blustein, *Laid Low: Inside the Crisis That Overwhelmed Europe and the IMF*, goes behind the scenes at the highest levels of global economic policy making, chronicling the International Monetary Fund’s (IMF’s) role in the euro-zone crisis.</p>
+       
+        <p>Opening with the sensational arrest of IMF Managing Director Dominique Strauss-Kahn, the book reveals that this sordid episode was only one in a series of setbacks for the IMF as financial conflagration spread from Greece to Ireland, Portugal, Spain, Italy and Cyprus — threatening to engulf a region comprising nearly one-fifth of world economic output.</p>
+        
+        <p><em>Foreign Affairs</em> praised *Laid Low*’s authoritative account of the euro-zone crisis: “Until now, a serious treatment of the International Monetary Fund’s role in the crisis has been missing.” A sentiment no doubt echoed by government officials in Washington, who asked him to testify before the US Congress on “Lessons from the IMF’s Bailout of Greece.”</p>
+        
+        
       <div class="view-article pb2 pt2">
           <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/publications/laid-low-inside-crisis-overwhelmed-europe-and-imf?source=ar2017"><i class="fa fa-file-text-o" aria-hidden="true"></i>Read more about <em>Laid Low</em>.</a>
       </div>
