--- a/_includes/slide7.html
+++ b/_includes/slide7.html
@@ -1,7 +1,19 @@
 <section class="vh-100-ns standard-slide slide-7">
+    <div class="background-img" style="background-image: url('assets/slides/UNDRIP.jpg')"></div>
+
   <div class="wrapper h-100 flex items-end">
     <div class="slide-content pb4-ns pr6-ns pb6-ns z-1 flex flex-column">
-      {% markdown template_content/slide7-undrip.md %}
+        
+        <h3>Research</h3>
+        <h1>A New Legal Framework for Indigenous Rights</h1>
+        <div class="mobile-img"><img src="assets/slides/UNDRIP.jpg" alt="Indigeneous painting of forest"></div>
+        <div class="photo-caption">
+          <em>Natives Playing on the Land</em> by Lawrence Paul Yuxweluptun
+        </div>
+       <p>In 2016, Canada’s Indigenous and Northern Affairs Minister Carolyn Bennett reversed Canada’s objector status and endorsed the United Nations Declaration on the Rights of Indigenous Peoples (UNDRIP).</p>
+        <p>International Law Research Program Director Oonagh Fitzgerald’s team responded by bringing together recommendations from Indigenous legal scholars and policy leaders on how Canada can build a new legal framework through the implementation of UNDRIP, revive a stalled process of reconciliation and embrace a true nation-to-nation relationship with Indigenous peoples. The resulting special report, *UNDRIP Implementation: Braiding International, Domestic and Indigenous Laws*, was launched in Ottawa and became one of CIGI’s most-read digital publications of the year with 650 online downloads. </p>
+        <p>As Indigenous issues made headlines throughout the spring, the report’s authors shared their expertise at subsequent events in Winnipeg and Geneva. Influential policy makers also took notice: the report was retweeted by Minister Bennett, Senator Ratna Omidvar and Ontario Human Rights Commissioner Renu Mandhane.</p>
+
       <div class="view-article pb2 pt2">
         <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/publications/undrip-implementation-braiding-international-domestic-and-indigenous-laws?source=ar2017"><i class="fa fa-file-text-o" aria-hidden="true"></i>Read the <em>UNDRIP Implementation</em> report.
         </a>
