fixing broken images and background on home page

--- a/_assets/css/custom/slides.scss
+++ b/_assets/css/custom/slides.scss
@@ -18,12 +18,24 @@
     display: none;
   }
 }
+
+.landing .background-img{
+  &::before {
+    background: rgba(215, 3, 24, 0.68);
+  }
+  @media (max-width: $small-phone) {
+    display: block;
+  }
+}
+
 .mobile-img{
   display: none;
   @media (max-width: $small-phone) {
     display: block;
   }
 }
+
+
 
 
 .slide-2,
@@ -301,30 +313,6 @@ p {
 }
     
 // Landing Page
-
-.landing-img {
-  
-  img {
-    height: 100vh;
-    left: 0;
-    object-fit: cover;
-    position: absolute;
-    top: 0;
-    width: 100vw;
-  }
-  
-  &::before {
-    background: rgba(215, 3, 24, 0.68);
-    content: ' ';
-    display: block;
-    height: 100%;
-    left: 0;
-    position: absolute;
-    top: 0;
-    width: 100%;
-    z-index: 1;
-  }
-}
 
 header.white {
   a,
