--- a/_includes/home.html
+++ b/_includes/home.html
@@ -1,7 +1,6 @@
 <section class="vh-100-ns landing slide-1">
-    <div class="landing-img">
-        <img class="progressive" src="assets/slides/CIGI_Campus-bw.jpg">
-    </div>
+    <div class="background-img" style="background-image: url('assets/slides/CIGI_Campus-bw.jpg')"></div>
+    
     <div class="wrapper h-100 flex items-center justify-center">
         <div class="content-wrapper">
             <h1>Home</h1>
