--- a/_includes/slide2.html
+++ b/_includes/slide2.html
@@ -1,4 +1,4 @@
-<section class="vh-100-ns standard-slide joint-message slide-2">
+<section class="vh-100-ns standard-slide joint-message slide-2" id="slide=2">
     <div class="wrapper h-100">
         <div class="slide-content pb4-ns pb6-ns pr6-ns z-1">
             <div class="tabs mb3" data-slide="slide-2">
