fix heading on blockchain slide, add background position

--- a/_assets/css/custom/slides.scss
+++ b/_assets/css/custom/slides.scss
@@ -3,6 +3,7 @@
 .background-img{
   background-size: cover;
   position: absolute;
+  background-position: bottom center;
   height: 100%;
   width: 100%;
   &::before {
