--- a/_assets/css/custom/slides.scss
+++ b/_assets/css/custom/slides.scss
@@ -36,12 +36,16 @@
   }
 }
 
+.slide-2 {
+  background-image: url('../assets/slides/RM-headshot-smaller.jpg');
+}
 
-
+.slide-16 {
+  background-image: url('../assets/slides/canvas.jpg');
+}
 
 .slide-2,
 .slide-16 {
-  background-image: url('../assets/slides/canvas.jpg');
   background-size: cover;
   background-position: 50% 50%;
   
@@ -281,7 +285,10 @@ p {
     
 .joint-message,
 .financials{
-  padding-top: 6rem;
+  .wrapper{
+    padding-top: 6rem;
+  }
+  
   
   h3 {
     display: none;
@@ -299,7 +306,7 @@ p {
     }		
   }
   @include media-query($small-phone) {
-    padding-top: 3rem;
+      padding-top: 3rem;
   }
 }
 
