updated slide order

--- a/_includes/slide8.html
+++ b/_includes/slide8.html
@@ -1,21 +1,28 @@
 <section class="vh-100-ns standard-slide slide-8">
-  <div class="background-img" style="background-image: url('assets/slides/north-of-60-2.jpg')"></div>
+  <div class="background-img"></div>
 
   <div class="wrapper h-100 flex items-end">
     <div class="slide-content pb4-ns pr6-ns pb6-ns z-1 flex flex-column">
-        <h3>Research</h3>
-        <h1>Arctic Policy Issues North of 60</h1>
-        <div class="mobile-img"><img src="assets/slides/north-of-60-2.jpg" alt="Arctic landscape"></div>
-        
-        <p>CIGI’s research on Canada’s Arctic policy culminated in a September 2016 event marking the twentieth anniversary of the Arctic Council. Co-hosted with Global Affairs Canada and Carleton University, the event drew ambassadors of Nordic countries, representatives from Northern governments, Indigenous leaders and senior Canadian policy makers.</p>
-        <p>It was an ideal opportunity to launch *North of 60: Toward a Renewed Canadian Arctic Agenda*, a special report edited by Senior Fellow John Higginbotham and Carleton University Research Associate Jennifer Spence. The report helps shape Canada’s Arctic agenda by bringing together pointed essays and interviews from leading Arctic experts on the complex social, environmental, economic and political circumstances that Northerners face.</p>
-        <p>The event, which included remarks from Canada’s Parliamentary Secretary of Foreign Affairs Pamela Goldsmith Jones, brought significant media coverage. In March 2017, CIGI co-hosted a follow-up event on the North American Arctic with the Wilson Center featuring an address from US Senator Lisa Murkowski.</p>
-        
+       <h3>Research</h3>
+       <h1>Climate Change and the Economics of Energy</h1>
+       <div class="mobile-img"><img src="assets/slides/Slide-Still-Windmill.jpg" alt="modern windmill"></div>
+       <p>Canadian economist and Senior Fellow Jeff Rubin is a world-leading energy expert and former chief economist and chief strategist at CIBC World Markets. His research papers, *The Case for Divesting from Fossil Fuels in Canada and Economic Opportunities from a Changing Climate*, were two of CIGI’s most-downloaded publications in 2016-2017.</p>
+        <p>Rubin calls on institutional investors, including pension plans and banks, to reassess their exposure to fossil fuel industries and suggests energy leaders consider the opportunities brought on by climate change in the wind and solar power industries. He also notes “climate change has the potential to turn Canada into one of the world’s principal breadbaskets.”</p>
+        <p>His work inspired discussion in news media (with interviews on CBC, Business News Network, <em>The Globe and Mail</em> and <em>The Toronto Star</em>, to name a few) and at events, including a public lecture and question period to a packed house at CIGI’s auditorium in May 2017.</p>
         
       <div class="view-article pb2 pt2">
-        <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/publications/north-60-toward-renewed-canadian-arctic-agenda?source=ar2017"><i class="fa fa-file-text-o" aria-hidden="true"></i>Read the <em>North of 60</em> special report.
-        </a>
+        <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/publications/case-divesting-fossil-fuels-canada?source=ar2017"><i class="fa fa-file-text-o" aria-hidden="true"></i>Read <em>The Case for Divesting from Fossil Fuels in Canada</em>.</a>
+       <br>
+        <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/publications/economic-opportunities-changing-climate?source=ar2017"><i class="fa fa-file-text-o" aria-hidden="true"></i>Read <em>Economic Opportunities from a Changing Climate</em>.</a>
+      </div>
+      <div class="lightbox-link">
+        <div class="youtube-lightbox pointer" data-videoid="ervJQ_v4fA8"><i class="fa fa-play" aria-hidden="true"></i>Watch Jeff Rubin’s lecture on the challenges and opportunities for Canada’s economy in a changing climate.            
+        </div>
       </div>
     </div>
   </div>
-</section>
+  <video loop muted class="fullscreen-bg-video">
+    <source src='{{ "/data/wind_turbine_FIX_2-4mbps_1.mp4" | relative_url }}' type="video/mp4">
+    </video>
+  </section>
+  
