--- a/_includes/slide10.html
+++ b/_includes/slide10.html
@@ -1,28 +1,25 @@
 <section class="vh-100-ns standard-slide slide-10">
-  <div class="background-img"></div>
 
-  <div class="wrapper h-100 flex items-end">
-    <div class="slide-content pb4-ns pr6-ns pb6-ns z-1 flex flex-column">
-       <h3>Research</h3>
-       <h1>Climate Change and the Economics of Energy</h1>
-       <div class="mobile-img"><img src="assets/slides/Slide-Still-Windmill.jpg" alt="modern windmill"></div>
-       <p>Canadian economist and Senior Fellow Jeff Rubin is a world-leading energy expert and former chief economist and chief strategist at CIBC World Markets. His research papers, *The Case for Divesting from Fossil Fuels in Canada and Economic Opportunities from a Changing Climate*, were two of CIGI’s most-downloaded publications in 2016-2017.</p>
-        <p>Rubin calls on institutional investors, including pension plans and banks, to reassess their exposure to fossil fuel industries and suggests energy leaders consider the opportunities brought on by climate change in the wind and solar power industries. He also notes “climate change has the potential to turn Canada into one of the world’s principal breadbaskets.”</p>
-        <p>His work inspired discussion in news media (with interviews on CBC, Business News Network, <em>The Globe and Mail</em> and <em>The Toronto Star</em>, to name a few) and at events, including a public lecture and question period to a packed house at CIGI’s auditorium in May 2017.</p>
+    <div class="background-img" style="background-image: url('assets/slides/nafta.jpg')"></div>
+
+    <div class="wrapper h-100 flex items-end">
+      <div class="slide-content pb4-ns pr6-ns pb6-ns z-1 flex flex-column">
+
+        <h3>Opinion</h3>
+        <h1>Modernizing NAFTA</h1>
+        <div class="mobile-img"><img src="assets/slides/nafta.jpg" alt="Bill Clinton signing the Nafta Agreement"></div>
+          <p>From the moment US President Donald Trump’s administration set in motion the renegotiation of the 25-year-old North American Free Trade Agreement (NAFTA), CIGI has been Canada’s leading resource for timely, expert analysis with over 700 media mentions.</p>
+          
+          <p>Senior Fellow Patrick Leblond’s first-out-of-the-gate research on modernizing NAFTA led to opinion editorials in *Maclean's* and <em>The Globe and Mail</em>, and was followed by a series of digital essays on what modernizing the trade accord will mean for the knowledge economy in Canada and the people who turn ideas into innovations within the free trade zone.</p>
+          
+          <p>This expansive offering of CIGI analysis, showcasing experts from across the organization’s programs, brought a Canadian perspective to the risks and benefits of reopening the agreement President Trump called “the worst trade deal maybe ever signed anywhere.”</p>
         
-      <div class="view-article pb2 pt2">
-        <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/publications/case-divesting-fossil-fuels-canada?source=ar2017"><i class="fa fa-file-text-o" aria-hidden="true"></i>Read <em>The Case for Divesting from Fossil Fuels in Canada</em>.</a>
-       <br>
-        <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/publications/economic-opportunities-changing-climate?source=ar2017"><i class="fa fa-file-text-o" aria-hidden="true"></i>Read <em>Economic Opportunities from a Changing Climate</em>.</a>
-      </div>
-      <div class="lightbox-link">
-        <div class="youtube-lightbox pointer" data-videoid="ervJQ_v4fA8"><i class="fa fa-play" aria-hidden="true"></i>Watch Jeff Rubin’s lecture on the challenges and opportunities for Canada’s economy in a changing climate.            
-        </div>
+          <div class="view-article pb2 pt2">
+            <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/nafta-and-knowledge-economy?source=ar2017"><i class="fa fa-file-text-o" aria-hidden="true"></i>Read the NAFTA and the Knowledge Economy essays.
+            </a>
+          </div>
+
       </div>
     </div>
-  </div>
-  <video loop muted class="fullscreen-bg-video">
-    <source src='{{ "/data/wind_turbine_FIX_2-4mbps_1.mp4" | relative_url }}' type="video/mp4">
-    </video>
-  </section>
-  
+    
+</section>
