--- a/_includes/slide3.html
+++ b/_includes/slide3.html
@@ -1,30 +1,23 @@
 <section class="vh-100-ns standard-slide slide-3">
-    <div class="background-img"></div>
+    <div class="background-img" style="background-image: url('assets/slides/LWW_background-image.jpg')"></div>
 
-  <div class="wrapper h-100 flex items-end">
-    <div class="slide-content pb4-ns pb6-ns pr6-ns z-1 flex flex-column">
-      
-      <h3>Analysis</h3>
-      <h1>New Thinking on Innovation</h1>
-      <div class="mobile-img"><img src="assets/slides/AR_InnovationSeries_mobile.jpg" alt="geometric line art"></div>
-        <p>Innovation is at the heart of the knowledge economy and an engine of prosperity. Yet in Canada, productivity has been stubbornly flat for the past 30 years — leading to a preoccupation with policies that stimulate innovation.</p>
-        
-        <p>CIGI responded in the spring of 2017 by bringing together top scholars and practitioners to offer fresh perspectives and policy approaches for Canada and for the global economic cooperation system. The resulting series of 18 online essays, New Thinking on Innovation, addressed a wide range of topics, from the role of international trade in stimulating innovation to the impact of intellectual property strategies on competitiveness.</p>
-        
-        <p>The exclusively online series, a first for CIGI, ushered in a new school of thought on innovation policy and was accompanied by video interviews and animation. Its creative delivery and stellar lineup of authors generated over 78,000 views and sparked online engagement from television personalities, entrepreneurial networks and government officials.</p>
-        
-      <div class="view-article pb2 pt2">
-          <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/innovation-series?source=ar2017"><i class="fa fa-file-text-o" aria-hidden="true"></i>Read the New Thinking on Innovation essays.</a>
+    <div class="wrapper h-100 flex items-end">
+      <div class="slide-content pb4-ns pr6-ns pb6-ns z-1 flex flex-column">
+
+        <h3>Research</h3>
+        <h1>Surveillance, Treachery and Trust Online</h1>
+        <div class="mobile-img"><img src="assets/slides/LWW_background-image.jpg" alt="Eye of owl"></div>
+        <p>From its opening lines about the high-profile hack of extramarital affair website Ashley Madison and later analysis of Edward Snowden’s revelations of government spying on internet users, *Look Who’s Watching: Surveillance, Treachery and Trust Online* demonstrates that public trust in the internet is often misplaced and is quickly eroding.</p>
+        <p>Global Security & Politics Program Director Fen Osler Hampson and Research Fellow Eric Jardine draw on extensive research, including multiple CIGI-Ipsos surveys and the final report of the CIGI-Chatham House Global Commission on Internet Governance, to examine why users are losing trust in the internet. They conclude that restoring trust in the internet is vital and possible through deliberate policy action. </p>
+        <p><em>Look Who’s Watching</em> is a semifinalist for the prestigious 2018 Grawemeyer Award, was listed among the best books of 2016 by <em>The Hill Times</em> and is shaping conversations in university classrooms through course adoptions. </p>
+          
+        <div class="view-article pb2 pt2">
+          <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/publications/look-whos-watching-surveillance-treachery-and-trust-online?source=ar2017"><i class="fa fa-file-text-o" aria-hidden="true"></i>Read more about <em>Look Who’s Watching</em>.
+          </a>
+        </div>
+        <div class="lightbox-link">
+            <div class="soundcloud-lightbox pointer" data-url="https://soundcloud.com/cigionline/cigi-podcast-episode-1001"><i class="fa fa-volume-down" aria-hidden="true"></i>Listen to former CBC Radio host Mary Ambrose interview Fen Osler Hampson about <em>Look Who’s Watching</em>.</div>
       </div>
-
-      <div class="lightbox-link">
-          <div class="youtube-lightbox pointer" data-videoid="s-QpV6AG-qg"><i class="fa fa-play" aria-hidden="true"></i>Watch CIGI President Rohinton P. Medhora introduce the New Thinking on Innovation series.</div>
       </div>
-
     </div>
-  </div>
-  <video loop muted class="fullscreen-bg-video">
-    <source src='{{ "/data/AR_InnovationLoop_720p_2.mp4" | relative_url }}' type="video/mp4">
-  </video>
 </section>
-
