--- a/_includes/slide7.html
+++ b/_includes/slide7.html
@@ -1,25 +1,20 @@
 <section class="vh-100-ns standard-slide slide-7">
-    <div class="background-img" style="background-image: url('assets/slides/UNDRIP.jpg')"></div>
+  <div class="background-img" style="background-image: url('assets/slides/low-carbon-economy.jpg')"></div>
 
   <div class="wrapper h-100 flex items-end">
-    <div class="slide-content pb4-ns pr6-ns pb6-ns z-1 flex flex-column">
-        
+    <div class="slide-content pb4-ns pr6-ns pb6-ns flex flex-column">
         <h3>Research</h3>
-        <h1>A New Legal Framework for Indigenous Rights</h1>
-        <div class="mobile-img"><img src="assets/slides/UNDRIP.jpg" alt="Indigeneous painting of forest"></div>
-        <div class="photo-caption">
-          <em>Natives Playing on the Land</em> by Lawrence Paul Yuxweluptun
-        </div>
-       <p>In 2016, Canada’s Indigenous and Northern Affairs Minister Carolyn Bennett reversed Canada’s objector status and endorsed the United Nations Declaration on the Rights of Indigenous Peoples (UNDRIP).</p>
-        <p>International Law Research Program Director Oonagh Fitzgerald’s team responded by bringing together recommendations from Indigenous legal scholars and policy leaders on how Canada can build a new legal framework through the implementation of UNDRIP, revive a stalled process of reconciliation and embrace a true nation-to-nation relationship with Indigenous peoples. The resulting special report, *UNDRIP Implementation: Braiding International, Domestic and Indigenous Laws*, was launched in Ottawa and became one of CIGI’s most-read digital publications of the year with 650 online downloads. </p>
-        <p>As Indigenous issues made headlines throughout the spring, the report’s authors shared their expertise at subsequent events in Winnipeg and Geneva. Influential policy makers also took notice: the report was retweeted by Minister Bennett, Senator Ratna Omidvar and Ontario Human Rights Commissioner Renu Mandhane.</p>
-
+        <h1>Solutions for a Low-carbon Economy</h1>
+        
+        <div class="mobile-img"><img src="assets/slides/low-carbon-economy.jpg" alt="looking up at trees"></div>
+        
+        <p>New research from Senior Fellow Céline Bak focused on low-carbon economic policies in the run-up to the 2017 Think 20 (T20) and Group of Twenty (G20) meetings in Germany. As co-chair of the T20 Task Force on Climate Policy and Finance, her group’s recommendations drove discussions among leaders looking for global solutions to foster a low-carbon economy.</p>
+        <p><em>Generating Growth from Innovation for the Low-carbon Economy: Exploring Safeguards in Finance and Regulation</em> looks at ways to build on momentum created by the Paris Agreement on climate change to double investments in energy innovation by 2020.</p>
+         
+        <p>Bak subsequently presented her research to Canada’s Parliamentary Standing Committee on Natural Resources, incorporated the theme of the brief in a joint letter from T20 groups opposing the US withdrawal from the Paris Agreement, hosted a meeting with public and private sector leaders to consider a road map toward green finance, and was a popular spokesperson on the G20’s approach to climate action.</p>
+        
       <div class="view-article pb2 pt2">
-        <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/publications/undrip-implementation-braiding-international-domestic-and-indigenous-laws?source=ar2017"><i class="fa fa-file-text-o" aria-hidden="true"></i>Read the <em>UNDRIP Implementation</em> report.
-        </a>
-      </div>
-      <div class="lightbox-link">
-        <div class="twitter-lightbox pointer" data-tweetid="869957715375869952"><i class="fa fa-play" aria-hidden="true"></i>Watch Senior Fellow John Borrows explain why UNDRIP is a legal opportunity for Canada's constitution.</div>
+        <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/publications/generating-growth-innovation-low-carbon-economy-exploring-safeguards-finance-and?source=ar2017"><i class="fa fa-file-text-o" aria-hidden="true"></i>Read <em>Generating Growth from Innovation for the Low-carbon Economy</em>.</a>
       </div>
     </div>
   </div>
