--- a/_includes/slide9.html
+++ b/_includes/slide9.html
@@ -1,21 +1,30 @@
 <section class="vh-100-ns standard-slide slide-9">
-  <div class="background-img" style="background-image: url('assets/slides/low-carbon-economy.jpg')"></div>
+    <div class="background-img"></div>
 
   <div class="wrapper h-100 flex items-end">
-    <div class="slide-content pb4-ns pr6-ns pb6-ns flex flex-column">
-        <h3>Research</h3>
-        <h1>Solutions for a Low-carbon Economy</h1>
+    <div class="slide-content pb4-ns pb6-ns pr6-ns z-1 flex flex-column">
+      
+      <h3>Opinion</h3>
+      <h1>New Thinking on Innovation</h1>
+      <div class="mobile-img"><img src="assets/slides/AR_InnovationSeries_mobile.jpg" alt="geometric line art"></div>
+        <p>Innovation is at the heart of the knowledge economy and an engine of prosperity. Yet in Canada, productivity has been stubbornly flat for the past 30 years — leading to a preoccupation with policies that stimulate innovation.</p>
         
-        <div class="mobile-img"><img src="assets/slides/low-carbon-economy.jpg" alt="looking up at trees"></div>
+        <p>CIGI responded in the spring of 2017 by bringing together top scholars and practitioners to offer fresh perspectives and policy approaches for Canada and for the global economic cooperation system. The resulting series of 18 online essays, New Thinking on Innovation, addressed a wide range of topics, from the role of international trade in stimulating innovation to the impact of intellectual property strategies on competitiveness.</p>
         
-        <p>New research from Senior Fellow Céline Bak focused on low-carbon economic policies in the run-up to the 2017 Think 20 (T20) and Group of Twenty (G20) meetings in Germany. As co-chair of the T20 Task Force on Climate Policy and Finance, her group’s recommendations drove discussions among leaders looking for global solutions to foster a low-carbon economy.</p>
-        <p><em>Generating Growth from Innovation for the Low-carbon Economy: Exploring Safeguards in Finance and Regulation</em> looks at ways to build on momentum created by the Paris Agreement on climate change to double investments in energy innovation by 2020.</p>
-         
-        <p>Bak subsequently presented her research to Canada’s Parliamentary Standing Committee on Natural Resources, incorporated the theme of the brief in a joint letter from T20 groups opposing the US withdrawal from the Paris Agreement, hosted a meeting with public and private sector leaders to consider a road map toward green finance, and was a popular spokesperson on the G20’s approach to climate action.</p>
+        <p>The exclusively online series, a first for CIGI, ushered in a new school of thought on innovation policy and was accompanied by video interviews and animation. Its creative delivery and stellar lineup of authors generated over 78,000 views and sparked online engagement from television personalities, entrepreneurial networks and government officials.</p>
         
       <div class="view-article pb2 pt2">
-        <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/publications/generating-growth-innovation-low-carbon-economy-exploring-safeguards-finance-and?source=ar2017"><i class="fa fa-file-text-o" aria-hidden="true"></i>Read <em>Generating Growth from Innovation for the Low-carbon Economy</em>.</a>
+          <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/innovation-series?source=ar2017"><i class="fa fa-file-text-o" aria-hidden="true"></i>Read the New Thinking on Innovation essays.</a>
       </div>
+
+      <div class="lightbox-link">
+          <div class="youtube-lightbox pointer" data-videoid="s-QpV6AG-qg"><i class="fa fa-play" aria-hidden="true"></i>Watch CIGI President Rohinton P. Medhora introduce the New Thinking on Innovation series.</div>
+      </div>
+
     </div>
   </div>
+  <video loop muted class="fullscreen-bg-video">
+    <source src='{{ "/data/AR_InnovationLoop_720p_2.mp4" | relative_url }}' type="video/mp4">
+  </video>
 </section>
+
