--- a/_includes/slide10.html
+++ b/_includes/slide10.html
@@ -10,7 +10,7 @@
         <div class="mobile-img"><img src="assets/slides/nafta.jpg" alt="Bill Clinton signing the Nafta Agreement"></div>
           <p>From the moment US President Donald Trump’s administration set in motion the renegotiation of the 25-year-old North American Free Trade Agreement (NAFTA), CIGI has been Canada’s leading resource for timely, expert analysis with over 700 media mentions.</p>
           
-          <p>Senior Fellow Patrick Leblond’s first-out-of-the-gate research on modernizing NAFTA led to opinion editorials in *Maclean's* and <em>The Globe and Mail</em>, and was followed by a series of digital essays on what modernizing the trade accord will mean for the knowledge economy in Canada and the people who turn ideas into innovations within the free trade zone.</p>
+          <p>Senior Fellow Patrick Leblond’s first-out-of-the-gate research on modernizing NAFTA led to opinion editorials in <em>Maclean's</em> and <em>The Globe and Mail</em>, and was followed by a series of digital essays on what modernizing the trade accord will mean for the knowledge economy in Canada and the people who turn ideas into innovations within the free trade zone.</p>
           
           <p>This expansive offering of CIGI analysis, showcasing experts from across the organization’s programs, brought a Canadian perspective to the risks and benefits of reopening the agreement President Trump called “the worst trade deal maybe ever signed anywhere.”</p>
         
