--- a/_includes/slide6.html
+++ b/_includes/slide6.html
@@ -8,7 +8,7 @@
         <div class="mobile-img"><img src="assets/slides/north-of-60-2.jpg" alt="Arctic landscape"></div>
         
         <p>CIGI’s research on Canada’s Arctic policy culminated in a September 2016 event marking the twentieth anniversary of the Arctic Council. Co-hosted with Global Affairs Canada and Carleton University, the event drew ambassadors of Nordic countries, representatives from Northern governments, Indigenous leaders and senior Canadian policy makers.</p>
-        <p>It was an ideal opportunity to launch *North of 60: Toward a Renewed Canadian Arctic Agenda*, a special report edited by Senior Fellow John Higginbotham and Carleton University Research Associate Jennifer Spence. The report helps shape Canada’s Arctic agenda by bringing together pointed essays and interviews from leading Arctic experts on the complex social, environmental, economic and political circumstances that Northerners face.</p>
+        <p>It was an ideal opportunity to launch <em>North of 60: Toward a Renewed Canadian Arctic Agenda</em>, a special report edited by Senior Fellow John Higginbotham and Carleton University Research Associate Jennifer Spence. The report helps shape Canada’s Arctic agenda by bringing together pointed essays and interviews from leading Arctic experts on the complex social, environmental, economic and political circumstances that Northerners face.</p>
         <p>The event, which included remarks from Canada’s Parliamentary Secretary of Foreign Affairs Pamela Goldsmith Jones, brought significant media coverage. In March 2017, CIGI co-hosted a follow-up event on the North American Arctic with the Wilson Center featuring an address from US Senator Lisa Murkowski.</p>
         
         
