--- a/_includes/slide11.html
+++ b/_includes/slide11.html
@@ -7,6 +7,8 @@
         <h3>Expertise</h3>
         <h1>Transforming the Global Refugee System</h1>
         <div class="mobile-img"><img src="assets/slides/Slide-Still-WRC.jpg" alt="Aerial view of refugee camp"></div>
+
+        <div class="photo-caption">Aerial footage of refugee camp used in World Refugee Council launch video</div>
         
         <p>Twenty-one million people are refugees and the number continues to rise. The international response has been uneven, prompting CIGI to convene thought leaders and innovators from around the globe to advance a new vision of global cooperation for refugee protection.</p>
         <p>The World Refugee Council is chaired by Lloyd Axworthy, former Canadian Minister of foreign affairs, and co-chaired by Jakaya Kikwete, former president of Tanzania; Hina Jilani, an advocate of the Supreme Court of Pakistan; and Rita Süssmuth, immigration reform advocate and former president of the German Bundestag.
