--- a/_includes/slide14.html
+++ b/_includes/slide14.html
@@ -8,6 +8,8 @@
 
         <div class="mobile-img"><img src="assets/slides/IMF.jpg" alt="attendants at IMF meeting"></div>
 
+        <div class="photo-caption">Christine Lagarde, managing director of the IMF (Associated Press)</div>
+
         <p>The meetings of the International Monetary Fund (IMF) and the World Bank Group bring together an impressive group of leaders, executives and academics to discuss subjects of global concern with specific attention to the outlook of the economy, global financial stability and economic development. CIGI plays a significant role in those discussions.</p>
         <p>At the 2016 annual meetings, CIGI and the Euro50 Group presented a timely panel on the euro zone after Brexit. At the spring meetings, CIGI and the Atlantic Council hosted a panel on Ukraine’s controversial banking reform tactics, which featured an introduction to the issue from Valeria Gontareva, governor of the National Bank of Ukraine. Senior Fellow Susan Schadler, who has more than three decades of experience at the IMF, participated as a panellist.</p>
         <p>CIGI policy briefs, papers, videos and social media complemented the presence of fellows attending the meeting, resulting in some 250 articles in major media outlets including the <em>Financial Times</em>, <em>The New York Times</em> and <em>The Wall Street Journal</em>.</p>
