--- a/_includes/slide15.html
+++ b/_includes/slide15.html
@@ -6,6 +6,8 @@
         <h3>Expertise</h3>
         <h1>CIGI at the G20 Summit</h1>
         <div class="mobile-img"><img src="assets/slides/T20-background.jpg" alt="Angela Merkel at T20 meeting"></div>
+
+        <div class="photo-caption">German Chancellor Angela Merkel at G20 summit news conference in Hamburg, Germany (Associated Press)</div>
         
         <p>CIGI convened its first G20-focused group in December 2009, when it helped lay the groundwork for the forum to expand from national finance ministers to leaders. Eight years later, CIGI experts from all three programs led discussions at the 2017 G20 summit and T20 meetings.</p>
         
