--- a/_includes/slide17.html
+++ b/_includes/slide17.html
@@ -6,9 +6,7 @@
       <h1>Thank You</h1>
       <div class="mobile-img"><img src="assets/slides/2017 CIGI Staff Photo - Setup 2 - FInal OPTIMIZED.jpg" alt="Staff Photo 2017"></div>
       
-      <div class="photo-caption">
-        Staff Photo
-      </div>
+      <div class="photo-caption">CIGI Staff Photo</div>
       
       <p>The success stories in this annual report, and the many others not highlighted here, are the direct result of the timely, relevant and innovative work of CIGI’s staff and fellows. Their work is a testament to CIGI’s mission to build bridges from knowledge to power.</p>
       
