--- a/_includes/slide3.html
+++ b/_includes/slide3.html
@@ -8,6 +8,8 @@
         <h1>Surveillance, Treachery and Trust Online</h1>
 
         <div class="mobile-img"><img src="assets/slides/LWW_background-image.jpg" alt="Eye of owl"></div>
+        
+        <div class="photo-caption"><em>Look Who's Watching</em> book cover</div>
 
         <p>From its opening lines about the high-profile hack of extramarital affair website Ashley Madison and later analysis of Edward Snowden’s revelations of government spying on internet users, <em>Look Who’s Watching: Surveillance, Treachery and Trust Online</em> demonstrates that public trust in the internet is often misplaced and is quickly eroding.</p>
         
