--- a/_includes/slide10.html
+++ b/_includes/slide10.html
@@ -1,25 +1,30 @@
 <section class="vh-100-ns standard-slide slide-10">
-
-    <div class="background-img" style="background-image: url('assets/slides/nafta.jpg')"></div>
-
-    <div class="wrapper h-100 flex items-end">
-      <div class="slide-content pb4-ns pr6-ns pb6-ns z-1 flex flex-column">
-
-        <h3>Opinion</h3>
-        <h1>Modernizing NAFTA</h1>
-        <div class="mobile-img"><img src="assets/slides/nafta.jpg" alt="Bill Clinton signing the Nafta Agreement"></div>
-          <p>From the moment US President Donald Trump’s administration set in motion the renegotiation of the 25-year-old North American Free Trade Agreement (NAFTA), CIGI has been Canada’s leading resource for timely, expert analysis with over 700 media mentions.</p>
-          
-          <p>Senior Fellow Patrick Leblond’s first-out-of-the-gate research on modernizing NAFTA led to opinion editorials in <em>Maclean's</em> and <em>The Globe and Mail</em>, and was followed by a series of digital essays on what modernizing the trade accord will mean for the knowledge economy in Canada and the people who turn ideas into innovations within the free trade zone.</p>
-          
-          <p>This expansive offering of CIGI analysis, showcasing experts from across the organization’s programs, brought a Canadian perspective to the risks and benefits of reopening the agreement President Trump called “the worst trade deal maybe ever signed anywhere.”</p>
-        
-          <div class="view-article pb2 pt2">
-            <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/nafta-and-knowledge-economy?source=ar2017"><i class="fa fa-file-text-o" aria-hidden="true"></i>Read the NAFTA and the Knowledge Economy essays.
-            </a>
-          </div>
-
+  
+  <div class="background-img" style="background-image: url('assets/slides/nafta.jpg')"></div>
+  
+  <div class="wrapper h-100 flex items-end">
+    <div class="slide-content pb4-ns pr6-ns pb6-ns z-1 flex flex-column">
+      
+      <h3>Opinion</h3>
+      <h1>Modernizing NAFTA</h1>
+      <div class="mobile-img"><img src="assets/slides/nafta.jpg" alt="Bill Clinton signing the Nafta Agreement"></div>
+      
+      <div class="photo-caption">NAFTA signing at the White House (Associated Press)</div>
+      
+      <p>From the moment US President Donald Trump’s administration set in motion the renegotiation of the 25-year-old North American Free Trade Agreement (NAFTA), CIGI has been Canada’s leading resource for timely, expert analysis with over 700 media mentions.</p>
+      
+      <p>Senior Fellow Patrick Leblond’s first-out-of-the-gate research on modernizing NAFTA led to opinion editorials in <em>Maclean's</em> and <em>The Globe and Mail</em>, and was followed by a series of digital essays on what modernizing the trade accord will mean for the knowledge economy in Canada and the people who turn ideas into innovations within the free trade zone.</p>
+      
+      <p>This expansive offering of CIGI analysis, showcasing experts from across the organization’s programs, brought a Canadian perspective to the risks and benefits of reopening the agreement President Trump called “the worst trade deal maybe ever signed anywhere.”</p>
+      
+      <div class="view-article pb2 pt2">
+        <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/nafta-and-knowledge-economy?source=ar2017">
+          <i class="fa fa-file-text-o" aria-hidden="true"></i>
+          Read the NAFTA and the Knowledge Economy essays.
+        </a>
       </div>
+      
     </div>
-    
+  </div>
+  
 </section>
