some small content changes

--- a/_includes/slide8.html
+++ b/_includes/slide8.html
@@ -9,7 +9,7 @@
 
       <div class="mobile-img"><img src="assets/slides/Slide-Still-Windmill.jpg" alt="modern windmill"></div>
       
-      <p>Canadian economist and Senior Fellow Jeff Rubin is a world-leading energy expert and former chief economist and chief strategist at CIBC World Markets. His research papers, <em>The Case for Divesting from Fossil Fuels in Canada and Economic Opportunities from a Changing Climate</em>, were two of CIGI’s most-downloaded publications this year.</p>
+      <p>Canadian economist and Senior Fellow Jeff Rubin is a world-leading energy expert and former chief economist and chief strategist at CIBC World Markets. His research papers, <em>The Case for Divesting from Fossil Fuels in Canada</em> and <em>Economic Opportunities from a Changing Climate</em>, were two of CIGI’s most-downloaded publications this year.</p>
       
       <p>Rubin calls on institutional investors, including pension plans and banks, to reassess their exposure to fossil fuel industries and suggests energy leaders consider the opportunities brought on by climate change in the wind and solar power industries. He also notes “climate change has the potential to turn Canada into one of the world’s principal breadbaskets.”</p>
       
