changed to landscape image

--- a/_includes/gallery.html
+++ b/_includes/gallery.html
@@ -114,7 +114,7 @@
         </div>
         <div class="image-container">
           <div class="image-wrapper">
-            <img src="{{ '/assets/gallery/IMG_4019.JPG' | relative_url }}"/>
+            <img src="{{ '/assets/gallery/IMG_4019-square.jpg' | relative_url }}"/>
           </div>
           <div class="caption">Research Fellow Alex He speaks in Beijing at the launch of his book The Dragon's Footprints: China in the Global Economic Governance System under the G20 Framework.</div>
         </div>
