--- a/_includes/gallery.html
+++ b/_includes/gallery.html
@@ -1,14 +1,10 @@
-<section class="vh-100-ns default-background relative">
-  <div class="wrapper vh-100-ns flex flex-column relative">
-    <main class="w-100 mt6-ns mt4" aria-label="Gallery">
-      <h1>
-        Photo Gallery
-      </h1>
-    </main>
-    <p>
-      Browse highlights from a year of hard work and new ideas.
-    </p>
-    <div class="mv4-ns mr4-ns relative">
+<section class="vh-100-ns default-background gallery-slide relative">
+  <div class="wrapper pr6-ns">
+   
+    <h1>Photo Gallery</h1>
+    <p>Browse highlights from a year of hard work and new ideas.</p>
+    
+    
       <div class="gallery" id="gallery">
         <div class="image-container">
           <div class="image-wrapper">
@@ -132,5 +128,5 @@
         </div>
       </div>
     </div>
-  </div>
+
 </section>
