--- a/_includes/slide16-sheet1.html
+++ b/_includes/slide16-sheet1.html
@@ -61,7 +61,7 @@
             <td></td>
         </tr>
         <tr>
-            <td>Bank Indebtness</td>
+            <td>Bank Indebtedness</td>
             <td>$0</td>
             <td>$132,070</td>
         </tr>
