--- a/_includes/slide12.html
+++ b/_includes/slide12.html
@@ -12,7 +12,7 @@
         <p>Bassem Awad, deputy director, intellectual property law and innovation, sees the venture as a potential model for raising IP awareness and delivering legal advice that could be applied in other countries.</p>
       
       <div class="lightbox-link">
-          <div class="youtube-lightbox pointer" data-videoid="GpnjBR8y8WE"><i class="fa fa-play" aria-hidden="true"></i>Watch Senior Fellow Richard Gold address the “myth” of intellectual property.
+          <div class="youtube-lightbox pointer" data-videoid="GpnjBR8y8WE"><i class="fa fa-play" aria-hidden="true"></i>Watch Senior Fellow E. Richard Gold address the “myth” of intellectual property.
           </div>
       </div>
     </div>
