--- a/_includes/slide16.html
+++ b/_includes/slide16.html
@@ -12,7 +12,7 @@
             <div class="tab-content">
                 <div class="tab" data-id="tab-1">
                     <h3>Financial Report</h3>
-                    <h1>Financial Statement</h1>  
+                    <h1>Financials</h1>  
                     <div class="col">
                            
                                  
