change files extension to lower case

--- a/_includes/gallery.html
+++ b/_includes/gallery.html
@@ -13,8 +13,8 @@
         </div>
 
         <div class="image-container">
-          <div class="image-wrapper" style="background-image: url('assets/gallery/3W7A0257-09-51-16_pre.JPG')">
-            <img class="view" src="{{ '/assets/gallery/3W7A0257-09-51-16.JPG' | relative_url }}"/>
+          <div class="image-wrapper" style="background-image: url('assets/gallery/3W7A0257-09-51-16_pre.jpg')">
+            <img class="view" src="{{ '/assets/gallery/3W7A0257-09-51-16.jpg' | relative_url }}"/>
           </div>
           <div class="caption">CIGI President Rohinton Medhora on stage at Gateway House India.</div>
         </div>
