fix file extension

--- a/_includes/gallery.html
+++ b/_includes/gallery.html
@@ -126,7 +126,7 @@
 
         <div class="image-container">
           <div class="image-wrapper" style="background-image: url('assets/gallery/IMG_4019-square_pre.jpg')">
-            <img class="view" src="{{ '/assets/gallery/IMG_4019-square.JPG' | relative_url }}"/>
+            <img class="view" src="{{ '/assets/gallery/IMG_4019-square.jpg' | relative_url }}"/>
           </div>
           <div class="caption">Research Fellow Alex He speaks in Beijing at the launch of his book The Dragon's Footprints: China in the Global Economic Governance System under the G20 Framework.</div>
         </div>
