--- a/_includes/slide2.html
+++ b/_includes/slide2.html
@@ -33,7 +33,7 @@
                             <em>President, CIGI</em></p>
                             
                         </div>
-                        <div class="photo-caption">Photo of Rohinton P. Medhora</div>
+                        <div class="photo-caption no-mobile">Photo of Rohinton P. Medhora</div>
                     </div>
                     <div class="tab" data-id="tab-2" data-name="chairs-message">
                         <h3>Messages</h3>
@@ -59,7 +59,7 @@
                                 <em>Chair, CIGI Board of Directors</em></p>
                             
                             </div>
-                            <div class="photo-caption">Photo of Jim Balsillie</div>
+                            <div class="photo-caption no-mobile">Photo of Jim Balsillie</div>
                         </div>
                     </div>
                 </div>
