--- a/_assets/css/custom/mobile.scss
+++ b/_assets/css/custom/mobile.scss
@@ -14,7 +14,7 @@
     border-bottom: solid 1px $grey-color-dark;
   }
   
-  // special mobile landscape overwrites
+  // special mobile landscape overwrites ******
   a.db-ns{
       display:none;
     }
@@ -53,7 +53,7 @@
   .cigi-logo-mobile{
     left:0px;
   }
-  // *******  
+  // ***************************************  
   
   #main-tabs {
     display: none;
@@ -178,12 +178,19 @@
       color: inherit;
     }
   }
+
+  .no-mobile {
+    display: none;
+  }
 }
 
 @media (min-width: $small-phone) and (min-height: $small-phone) {
   .cigi-logo-mobile,
   .toc-close-mobile,
   .toc-open-mobile {
+    display: none;
+  }
+  .mobile-only{
     display: none;
   }
 }
