go back to padding on the image-container

--- a/_assets/css/custom/gallery.scss
+++ b/_assets/css/custom/gallery.scss
@@ -10,8 +10,8 @@
   .image-container {
     position: relative;
     cursor: pointer;
-    flex-basis: 19.7%;
-    margin: 0.1rem;
+    flex-basis: 20%;
+    padding: 0.1rem;
     width: 210px;
     height: 140px;
     overflow: hidden;
