--- a/_includes/slide16.html
+++ b/_includes/slide16.html
@@ -5,7 +5,7 @@
                 <div class="tab toggle" data-id="tab-1">Auditor's Report</div>
                 <div class="tab toggle" data-id="tab-2">Balance Sheet</div>
                 <div class="tab toggle" data-id="tab-3">Revenue and Expenses</div>
-                <div class="tab toggle" data-id="tab-4">Notes</div>
+                <div class="tab toggle notes" data-id="tab-4">Notes</div>
                 <div class="download"><a class="no-underline" href="#">Download PDF</a></div>
             </div>
 
